  with MSVC or clang-cl.
  (Antonin Décimo, review by Miod Vallat)

- #13241, #13261, #13271: Add CFI_SIGNAL_FRAME to ARM64 and RiscV runtimes,
  for the purpose of displaying backtraces correctly in GDB.
  (Tim McGilchrist, review by Miod Vallat, Gabriel Scherer and
   KC Sivaramakrishnan)

- #13139: Simplify CAMLalign to always use C23/C++11 alignas or C11
  _Alignas.
  (Antonin Décimo, review by Miod Vallat and Xavier Leroy)

### Code generation and optimizations:

- #13014: Enable compile-time option -function-sections on all previously
  unsupported native backends (POWER, riscv64 and s390x)
  (Miod Vallat, review by Nicolás Ojeda Bär)

- #7241, #12555, #13076, #13138: fix a soundness bug in the
  pattern-matching compiler when side-effects mutate the scrutinee
  during matching.
  Note that #7241 is not fully fixed yet, see the issue for the
  current status.
  (Gabriel Scherer, review by Nick Roberts)

- #13179: Fix evaluation of toplevel lets in classes containing
  local opens
  (Vincent Laviron, review by Hugo Heuzard, Nathanaëlle Courant
   and Gabriel Scherer)

### Standard library:

- #12884: Add `Queue.drop`
  (Léo Andrès, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #13168: In Array.shuffle, clarify the code that validates the
  result of the user-supplied function `rand`, and improve the
  error message that is produced when this result is invalid.
  (François Pottier, review by Florian Angeletti, Daniel Bünzli
   and Gabriel Scherer)

- #12133: Expose support for printing substrings in Format
  (Florian Angeletti, review by Daniel Bünzli, Gabriel Scherer
   and Nicolás Ojeda Bär)

- #12869: Add List.take, List.drop, List.take_while and List.drop_while
  (Kate Deplaix and Oscar Butler-Aldridge, review by Nicolás Ojeda Bär,
   Craig Ferguson and Gabriel Scherer)

- #12885: move Dynarray to an unboxed representation
  (Gabriel Scherer, suggestions by Vincent Laviron,
   review by Olivier Nicole and Simon Cruanes, Yann Leray, Alain Frisch)
