@@ -20,6 +20,10 @@
 #include <stdio.h>
 #include <stdarg.h>
 #include <stddef.h>
+#include <stdalign.h>
+#if defined(_WIN32)
+#include <malloc.h>
+#endif
 #include "caml/config.h"
 #include "caml/custom.h"
 #include "caml/misc.h"
@@ -492,11 +496,22 @@ CAMLexport value caml_alloc_shr_noexc(mlsize_t wosize, tag_t tag) {
 typedef double max_align_t;
 #endif
 
+#define MAX(a, b) ((a) > (b) ? (a) : (b))
+#define MIN(a, b) ((a) < (b) ? (a) : (b))
+
+#if defined(_M_AMD64) || defined(__x86_64__)
+#define pool_block_align MAX(alignof(max_align_t), 16 /* for SSE */)
+#else
+#define pool_block_align alignof(max_align_t)
+#endif
+
 struct pool_block {
   struct pool_block *next;
   struct pool_block *prev;
-  CAMLalign(max_align_t) char data[]; /* not allocated, used for
-                                       * alignment purposes */
+#ifndef _WIN32
+  size_t size;
+#endif
+  alignas(pool_block_align) char data[]; /* flexible array member */
 };
 
 static struct pool_block *pool = NULL;
@@ -548,12 +563,17 @@ CAMLexport void caml_stat_destroy_pool(void)
 {
   caml_plat_lock_blocking(&pool_mutex);
   if (pool != NULL) {
-    pool->prev->next = NULL;
-    while (pool != NULL) {
-      struct pool_block *next = pool->next;
-      free(pool);
-      pool = next;
+    struct pool_block *pb = pool->next;
+    while (pb != pool) {
+      struct pool_block *next = pb->next;
+#ifdef _WIN32
+      _aligned_free(pb);
+#else
+      free(pb);
+#endif
+      pb = next;
     }
+    free(pool);
     pool = NULL;
   }
   caml_plat_unlock(&pool_mutex);
@@ -566,8 +586,16 @@ CAMLexport caml_stat_block caml_stat_alloc_noexc(asize_t sz)
   if (pool == NULL)
     return malloc(sz);
   else {
-    struct pool_block *pb = malloc(sizeof(struct pool_block) + sz);
+    struct pool_block *pb;
+#ifdef _WIN32
+    pb = _aligned_malloc(sizeof(struct pool_block) + sz, pool_block_align);
+#else
+    pb = aligned_alloc(pool_block_align, sizeof(struct pool_block) + sz);
+#endif
     if (pb == NULL) return NULL;
+#ifndef _WIN32
+    pb->size = sz;
+#endif
     link_pool_block(pb);
     return &(pb->data);
   }
@@ -630,7 +658,11 @@ CAMLexport void caml_stat_free(caml_stat_block b)
     struct pool_block *pb = get_pool_block(b);
     if (pb == NULL) return;
     unlink_pool_block(pb);
+#ifdef _WIN32
+    _aligned_free(pb);
+#else
     free(pb);
+#endif
   }
 }
 
@@ -649,12 +681,24 @@ CAMLexport caml_stat_block caml_stat_resize_noexc(caml_stat_block b, asize_t sz)
        while other domains access the pool concurrently. */
     unlink_pool_block(pb);
     /* Reallocating */
-    pb_new = realloc(pb, sizeof(struct pool_block) + sz);
+#ifdef _WIN32
+    pb_new = _aligned_realloc(pb, sizeof(struct pool_block) + sz,
+                              pool_block_align);
+#else
+    pb_new = aligned_alloc(pool_block_align, sizeof(struct pool_block) + sz);
+#endif
     if (pb_new == NULL) {
       /* The old block is still there, relinking it */
       link_pool_block(pb);
       return NULL;
     } else {
+#ifdef _WIN32
+      _aligned_free(pb);
+#else
+      pb_new->size = sz;
+      memcpy(pb_new->data, pb->data, MIN(pb->size, pb_new->size));
+      free(pb);
+#endif
       link_pool_block(pb_new);
       return &(pb_new->data);
     }
